--- a/app/config/doctrine.yml
+++ b/app/config/doctrine.yml
@@ -16,7 +16,7 @@ doctrine:
                     collate: utf8mb4_unicode_ci 
                 mapping_types:
                     enum: string
-        #       wrapper_class:        Busybee\HomeBundle\Doctrine\BusyBeeConnection
+        #       wrapper_class:        Busybee\Core\HomeBundle\Doctrine\BusyBeeConnection
                 server_version: 5.6
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
