--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,15 @@
+busybee_home:
+    resource: '@BusybeeHomeBundle/Resources/config/routing.yml'
+    prefix: /
+
+busybee_security:
+    resource: '@BusybeeSecurityBundle/Resources/config/routing.yml'
+    prefix: security
+
+busybee_system:
+    resource: '@SystemBundle/Resources/config/routing.yml'
+    prefix: system
+
 busybee_bundles:
     resource: .
     type: advanced_extra
