TimeTable Almost Displaying Again.  Missing Dates and Times
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/Core/SystemBundle/Resources/config/Settings/Settings_0_0_03.yml
+++ b/src/Busybee/Core/SystemBundle/Resources/config/Settings/Settings_0_0_03.yml
@@ -11,7 +11,7 @@ student.groups:
     displayName: Student Groups
     description: Usually the year groups that attend this school.
     role: ROLE_REGISTRAR
-    value: |
+    value:
         'Year 13': Y13
         'Year 12': Y12
         'Year 11': Y11
