--- a/src/Busybee/Core/SystemBundle/Resources/Defaults/Australia.yml
+++ b/src/Busybee/Core/SystemBundle/Resources/Defaults/Australia.yml
@@ -114,7 +114,8 @@ settings:
         Sub-Saharan African: '9000'
         Central and West African: '9100'
         Southern and East African: '9200'
-    student.group:
+    student.groups:
+        'Year 13': Y13
         'Year 12': Y12
         'Year 11': Y11
         'Year 10': Y10
