--- a/src/Busybee/Core/CalendarBundle/Resources/config/Settings/Settings_0_0_01.yml
+++ b/src/Busybee/Core/CalendarBundle/Resources/config/Settings/Settings_0_0_01.yml
@@ -1,6 +1,6 @@
 Calendar.version:
     type: system
     value: 0.0.01
-    displayName: Calendar Bundle Version
-    description: Calendar Bundle Version
+    displayName: 'Version: Calendar Bundle'
+    description: System Setting ONLY
     role: ROLE_SYSTEM_ADMIN
