--- a/src/Busybee/Core/PaginationBundle/Resources/config/Settings/Settings_0_0_01.yml
+++ b/src/Busybee/Core/PaginationBundle/Resources/config/Settings/Settings_0_0_01.yml
@@ -1,6 +1,6 @@
 Pagination.version:
     type: system
     value: 0.0.01
-    displayName: Pagination Bundle Version
-    description: Pagination Bundle Version
+    displayName: 'Version: Pagination Bundle'
+    description: System Setting ONLY
     role: ROLE_SYSTEM_ADMIN
