--- a/src/Busybee/InstituteBundle/Resources/config/validation/Space.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/validation/Space.yml
@@ -6,4 +6,4 @@ Busybee\InstituteBundle\Entity\Space:
             message: campus.space.unique.name
     properties:
         phoneExt:
-            - Busybee\PersonBundle\Validator\Phone: ~
+            - Busybee\People\PersonBundle\Validator\Phone: ~
