--- a/src/Busybee/People/StudentBundle/Resources/config/Settings/Settings_0_0_01.yml
+++ b/src/Busybee/People/StudentBundle/Resources/config/Settings/Settings_0_0_01.yml
@@ -1,6 +1,6 @@
 Student.version:
     type: system
     value: 0.0.01
-    displayName: Student Bundle Version
-    description: Student Bundle Version
+    displayName: 'Version: Student Bundle'
+    description: System Setting ONLY
     role: ROLE_SYSTEM_ADMIN
