--- a/src/Busybee/People/StudentBundle/Resources/config/services.yml
+++ b/src/Busybee/People/StudentBundle/Resources/config/services.yml
@@ -73,7 +73,7 @@ services:
         class: Busybee\People\StudentBundle\Form\StudentType
         arguments:
             - '@doctrine.orm.entity_manager'
-            - '@setting.manager'
+            - '@busybee_core_system.setting.setting_manager'
         tags:
             - { name: form.type }
     passport.image.validator:
@@ -122,7 +122,7 @@ services:
     student.manager:
         class: Busybee\People\StudentBundle\Model\StudentManager
         arguments:
-            - '@setting.manager'
+            - '@busybee_core_system.setting.setting_manager'
             - '@doctrine.orm.entity_manager'
             - '@validator'
             - '@current.year.currentYear'
