--- a/src/Busybee/PeriodBundle/Resources/config/Settings/Settings_0_0_01.yml
+++ b/src/Busybee/PeriodBundle/Resources/config/Settings/Settings_0_0_01.yml
@@ -1,6 +1,6 @@
 Period.version:
     type: system
     value: 0.0.01
-    displayName: Period Bundle Version
-    description: Period Bundle Version
+    displayName: Version: Period Bundle
+    description: System Setting ONLY
     role: ROLE_SYSTEM_ADMIN
