--- a/src/Busybee/InstituteBundle/Resources/config/services.yml
+++ b/src/Busybee/InstituteBundle/Resources/config/services.yml
@@ -9,7 +9,7 @@ parameters:
             - s.name
             - s.comment
         limit: '25'
-    Institute:
+    InstituteBundle:
         version: 0.0.01
         settings:
             resources: 'BusybeeInstituteBundle/Resources/config/Settings/Settings_0_0_01.yml'
