--- a/src/Busybee/People/StudentBundle/Resources/config/services.yml
+++ b/src/Busybee/People/StudentBundle/Resources/config/services.yml
@@ -56,7 +56,7 @@ parameters:
             contact:
                 route: contact_manage
                 prompt: pagination.person.contact
-    Student:
+    StudentBundle:
         version: 0.0.01
         settings:
             resources:
