--- a/src/Busybee/PeriodBundle/Resources/config/services.yml
+++ b/src/Busybee/PeriodBundle/Resources/config/services.yml
@@ -1,5 +1,5 @@
 parameters:
-    Period:
+    PeriodBundle:
         version: '0.0.01'
         settings:
             resources: 'BusybeePeriodBundle/Resources/config/Settings/Settings_0_0_01.yml'
