--- a/src/Busybee/CurriculumBundle/Resources/config/services.yml
+++ b/src/Busybee/CurriculumBundle/Resources/config/services.yml
@@ -25,7 +25,7 @@ parameters:
             - c.version
             - c.targetYear
             - c.code
-    Curriculum:
+    CurriculumBundle:
         version: 0.0.01
         settings:
             resources:
