--- a/src/Busybee/People/FamilyBundle/Resources/config/services.yml
+++ b/src/Busybee/People/FamilyBundle/Resources/config/services.yml
@@ -11,7 +11,7 @@ parameters:
         select:
             - f.name
             - f.id
-   Family:
+   FamilyBundle:
         version: 0.0.01
         settings:
             resources:
