--- a/src/Busybee/People/StaffBundle/Resources/config/services.yml
+++ b/src/Busybee/People/StaffBundle/Resources/config/services.yml
@@ -48,7 +48,7 @@ parameters:
             contact:
                 route: contact_manage
                 prompt: pagination.person.contact
-    Staff:
+    StaffBundle:
         version: 0.0.01
         settings:
             resources: 'BusybeeStaffBundle/Resources/config/Settings/Settings_0_0_01.yml'
